// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitted output snapshot > matches the recorded semantic.css 1`] = `
"/* Generated by Design System Generator — edit the system, not this file. */
/* Requires tokens.css. */

:root {
  --color-background: var(--color-neutral-50);
  --color-foreground: var(--color-neutral-950);
  --color-card: var(--color-neutral-50);
  --color-card-foreground: var(--color-neutral-950);
  --color-muted: var(--color-neutral-100);
  --color-muted-foreground: var(--color-neutral-600);
  --color-primary: var(--color-brand-600);
  --color-primary-foreground: var(--color-neutral-50);
  --color-secondary: var(--color-neutral-100);
  --color-secondary-foreground: var(--color-neutral-900);
  --color-accent: var(--color-accent-500);
  --color-accent-foreground: var(--color-neutral-50);
  --color-destructive: var(--color-danger-600);
  --color-destructive-foreground: var(--color-neutral-50);
  --color-border: var(--color-neutral-200);
  --color-input: var(--color-neutral-200);
  --color-ring: var(--color-brand-500);
}

.dark,
[data-theme='dark'] {
  --color-background: var(--color-neutral-950);
  --color-foreground: var(--color-neutral-50);
  --color-card: var(--color-neutral-900);
  --color-card-foreground: var(--color-neutral-50);
  --color-muted: var(--color-neutral-800);
  --color-muted-foreground: var(--color-neutral-400);
  --color-primary: var(--color-brand-500);
  --color-primary-foreground: var(--color-neutral-950);
  --color-secondary: var(--color-neutral-800);
  --color-secondary-foreground: var(--color-neutral-50);
  --color-accent: var(--color-accent-400);
  --color-accent-foreground: var(--color-neutral-950);
  --color-destructive: var(--color-danger-500);
  --color-destructive-foreground: var(--color-neutral-950);
  --color-border: var(--color-neutral-800);
  --color-input: var(--color-neutral-800);
  --color-ring: var(--color-brand-400);
}
"
`;

exports[`emitted output snapshot > matches the recorded theme.css 1`] = `
"/* Generated by Design System Generator — edit the system, not this file. */

@import 'tailwindcss';

/* Dark mode is driven by a class or data attribute so the app stays in control. To
   follow the OS instead, see the snippet in README.md. */
@custom-variant dark (&:where(.dark, .dark *, [data-theme='dark'], [data-theme='dark'] *));

/* \`static\` forces every variable to be emitted. Without it Tailwind drops theme values
   no utility references, and the semantic layer below reaches them only through var(). */
@theme static {
  /* Color scales */
  --color-brand-50: oklch(0.971 0.0113 274.04);
  --color-brand-100: oklch(0.932 0.026 272.84);
  --color-brand-200: oklch(0.882 0.0502 271.64);
  --color-brand-300: oklch(0.809 0.0852 270.44);
  --color-brand-400: oklch(0.707 0.1379 269.24);
  --color-brand-500: oklch(0.623 0.1735 268.04);
  --color-brand-600: oklch(0.546 0.1987 266.84);
  --color-brand-700: oklch(0.488 0.1987 265.64);
  --color-brand-800: oklch(0.424 0.1809 264.44);
  --color-brand-900: oklch(0.379 0.1492 263.24);
  --color-brand-950: oklch(0.282 0.0737 262.04);
  --color-neutral-50: oklch(0.971 0.0007 285.94);
  --color-neutral-100: oklch(0.932 0.0018 285.94);
  --color-neutral-200: oklch(0.882 0.0034 285.94);
  --color-neutral-300: oklch(0.809 0.0059 285.94);
  --color-neutral-400: oklch(0.707 0.0095 285.94);
  --color-neutral-500: oklch(0.623 0.012 285.94);
  --color-neutral-600: oklch(0.546 0.0138 285.94);
  --color-neutral-700: oklch(0.488 0.0138 285.94);
  --color-neutral-800: oklch(0.424 0.0125 285.94);
  --color-neutral-900: oklch(0.379 0.0103 285.94);
  --color-neutral-950: oklch(0.282 0.0051 285.94);
  --color-accent-50: oklch(0.971 0.0121 241.32);
  --color-accent-100: oklch(0.932 0.0279 240.52);
  --color-accent-200: oklch(0.882 0.0539 239.72);
  --color-accent-300: oklch(0.809 0.0914 238.92);
  --color-accent-400: oklch(0.707 0.1478 238.12);
  --color-accent-500: oklch(0.623 0.1366 237.32);
  --color-accent-600: oklch(0.546 0.1183 236.52);
  --color-accent-700: oklch(0.488 0.1045 235.72);
  --color-accent-800: oklch(0.424 0.0898 234.92);
  --color-accent-900: oklch(0.379 0.0794 234.12);
  --color-accent-950: oklch(0.282 0.0584 233.32);
  --color-danger-50: oklch(0.971 0.0122 23.33);
  --color-danger-100: oklch(0.932 0.0281 24.13);
  --color-danger-200: oklch(0.882 0.0544 24.93);
  --color-danger-300: oklch(0.809 0.0923 25.73);
  --color-danger-400: oklch(0.707 0.1493 26.53);
  --color-danger-500: oklch(0.623 0.1878 27.33);
  --color-danger-600: oklch(0.546 0.2151 28.13);
  --color-danger-700: oklch(0.488 0.2 28.93);
  --color-danger-800: oklch(0.424 0.1713 29.73);
  --color-danger-900: oklch(0.379 0.1496 30.53);
  --color-danger-950: oklch(0.282 0.0798 31.33);

  /* Typography */
  --font-sans: Inter, ui-sans-serif, system-ui, sans-serif;
  --font-serif: ui-serif, Georgia, Cambria, serif;
  --font-mono: ui-monospace, SFMono-Regular, Menlo, monospace;
  --text-xs: 0.6944rem;
  --text-xs--line-height: 1.75;
  --text-xs--letter-spacing: 0.0116em;
  --text-sm: 0.8333rem;
  --text-sm--line-height: 1.652;
  --text-sm--letter-spacing: 0.0058em;
  --text-base: 1rem;
  --text-base--line-height: 1.533;
  --text-base--letter-spacing: 0em;
  --text-lg: 1.2rem;
  --text-lg--line-height: 1.415;
  --text-lg--letter-spacing: -0.0058em;
  --text-xl: 1.44rem;
  --text-xl--line-height: 1.297;
  --text-xl--letter-spacing: -0.0116em;
  --text-2xl: 1.728rem;
  --text-2xl--line-height: 1.178;
  --text-2xl--letter-spacing: -0.0174em;
  --text-3xl: 2.0736rem;
  --text-3xl--line-height: 1.06;
  --text-3xl--letter-spacing: -0.0231em;
  --text-4xl: 2.4883rem;
  --text-4xl--line-height: 1.05;
  --text-4xl--letter-spacing: -0.0289em;
  --text-5xl: 2.986rem;
  --text-5xl--line-height: 1.05;
  --text-5xl--letter-spacing: -0.0347em;

  /* Spacing — Tailwind derives every step from this base */
  --spacing: 0.25rem;

  /* Radii */
  --radius-none: 0rem;
  --radius-sm: 0.25rem;
  --radius-md: 0.5rem;
  --radius-lg: 0.75rem;
  --radius-xl: 1rem;
  --radius-2xl: 1.5rem;
  --radius-full: 9999px;

  /* Shadows */
  --shadow-sm: 0 1px 2px 0px rgb(10 10 10 / 0.05);
  --shadow-md: 0 4px 6px -1px rgb(10 10 10 / 0.1), 0 2px 4px -2px rgb(10 10 10 / 0.1);
  --shadow-lg: 0 10px 15px -3px rgb(10 10 10 / 0.1), 0 4px 6px -4px rgb(10 10 10 / 0.1);
  --shadow-xl: 0 20px 25px -5px rgb(10 10 10 / 0.1), 0 8px 10px -6px rgb(10 10 10 / 0.1);

}

/* \`inline\` keeps utilities pointing at the variable instead of copying its value, which
   is what makes runtime theme switching work. */
@theme inline {
  --color-background: var(--semantic-background);
  --color-foreground: var(--semantic-foreground);
  --color-card: var(--semantic-card);
  --color-card-foreground: var(--semantic-card-foreground);
  --color-muted: var(--semantic-muted);
  --color-muted-foreground: var(--semantic-muted-foreground);
  --color-primary: var(--semantic-primary);
  --color-primary-foreground: var(--semantic-primary-foreground);
  --color-secondary: var(--semantic-secondary);
  --color-secondary-foreground: var(--semantic-secondary-foreground);
  --color-accent: var(--semantic-accent);
  --color-accent-foreground: var(--semantic-accent-foreground);
  --color-destructive: var(--semantic-destructive);
  --color-destructive-foreground: var(--semantic-destructive-foreground);
  --color-border: var(--semantic-border);
  --color-input: var(--semantic-input);
  --color-ring: var(--semantic-ring);
}

:root {
  --semantic-background: var(--color-neutral-50);
  --semantic-foreground: var(--color-neutral-950);
  --semantic-card: var(--color-neutral-50);
  --semantic-card-foreground: var(--color-neutral-950);
  --semantic-muted: var(--color-neutral-100);
  --semantic-muted-foreground: var(--color-neutral-600);
  --semantic-primary: var(--color-brand-600);
  --semantic-primary-foreground: var(--color-neutral-50);
  --semantic-secondary: var(--color-neutral-100);
  --semantic-secondary-foreground: var(--color-neutral-900);
  --semantic-accent: var(--color-accent-500);
  --semantic-accent-foreground: var(--color-neutral-50);
  --semantic-destructive: var(--color-danger-600);
  --semantic-destructive-foreground: var(--color-neutral-50);
  --semantic-border: var(--color-neutral-200);
  --semantic-input: var(--color-neutral-200);
  --semantic-ring: var(--color-brand-500);
}

.dark,
[data-theme='dark'] {
  --semantic-background: var(--color-neutral-950);
  --semantic-foreground: var(--color-neutral-50);
  --semantic-card: var(--color-neutral-900);
  --semantic-card-foreground: var(--color-neutral-50);
  --semantic-muted: var(--color-neutral-800);
  --semantic-muted-foreground: var(--color-neutral-400);
  --semantic-primary: var(--color-brand-500);
  --semantic-primary-foreground: var(--color-neutral-950);
  --semantic-secondary: var(--color-neutral-800);
  --semantic-secondary-foreground: var(--color-neutral-50);
  --semantic-accent: var(--color-accent-400);
  --semantic-accent-foreground: var(--color-neutral-950);
  --semantic-destructive: var(--color-danger-500);
  --semantic-destructive-foreground: var(--color-neutral-950);
  --semantic-border: var(--color-neutral-800);
  --semantic-input: var(--color-neutral-800);
  --semantic-ring: var(--color-brand-400);
}
"
`;

exports[`emitted output snapshot > matches the recorded tokens.css 1`] = `
"/* Generated by Design System Generator — edit the system, not this file. */

:root {
  /* Color scales */
  --color-brand-50: oklch(0.971 0.0113 274.04);
  --color-brand-100: oklch(0.932 0.026 272.84);
  --color-brand-200: oklch(0.882 0.0502 271.64);
  --color-brand-300: oklch(0.809 0.0852 270.44);
  --color-brand-400: oklch(0.707 0.1379 269.24);
  --color-brand-500: oklch(0.623 0.1735 268.04);
  --color-brand-600: oklch(0.546 0.1987 266.84);
  --color-brand-700: oklch(0.488 0.1987 265.64);
  --color-brand-800: oklch(0.424 0.1809 264.44);
  --color-brand-900: oklch(0.379 0.1492 263.24);
  --color-brand-950: oklch(0.282 0.0737 262.04);
  --color-neutral-50: oklch(0.971 0.0007 285.94);
  --color-neutral-100: oklch(0.932 0.0018 285.94);
  --color-neutral-200: oklch(0.882 0.0034 285.94);
  --color-neutral-300: oklch(0.809 0.0059 285.94);
  --color-neutral-400: oklch(0.707 0.0095 285.94);
  --color-neutral-500: oklch(0.623 0.012 285.94);
  --color-neutral-600: oklch(0.546 0.0138 285.94);
  --color-neutral-700: oklch(0.488 0.0138 285.94);
  --color-neutral-800: oklch(0.424 0.0125 285.94);
  --color-neutral-900: oklch(0.379 0.0103 285.94);
  --color-neutral-950: oklch(0.282 0.0051 285.94);
  --color-accent-50: oklch(0.971 0.0121 241.32);
  --color-accent-100: oklch(0.932 0.0279 240.52);
  --color-accent-200: oklch(0.882 0.0539 239.72);
  --color-accent-300: oklch(0.809 0.0914 238.92);
  --color-accent-400: oklch(0.707 0.1478 238.12);
  --color-accent-500: oklch(0.623 0.1366 237.32);
  --color-accent-600: oklch(0.546 0.1183 236.52);
  --color-accent-700: oklch(0.488 0.1045 235.72);
  --color-accent-800: oklch(0.424 0.0898 234.92);
  --color-accent-900: oklch(0.379 0.0794 234.12);
  --color-accent-950: oklch(0.282 0.0584 233.32);
  --color-danger-50: oklch(0.971 0.0122 23.33);
  --color-danger-100: oklch(0.932 0.0281 24.13);
  --color-danger-200: oklch(0.882 0.0544 24.93);
  --color-danger-300: oklch(0.809 0.0923 25.73);
  --color-danger-400: oklch(0.707 0.1493 26.53);
  --color-danger-500: oklch(0.623 0.1878 27.33);
  --color-danger-600: oklch(0.546 0.2151 28.13);
  --color-danger-700: oklch(0.488 0.2 28.93);
  --color-danger-800: oklch(0.424 0.1713 29.73);
  --color-danger-900: oklch(0.379 0.1496 30.53);
  --color-danger-950: oklch(0.282 0.0798 31.33);

  /* Typography */
  --font-sans: Inter, ui-sans-serif, system-ui, sans-serif;
  --font-serif: ui-serif, Georgia, Cambria, serif;
  --font-mono: ui-monospace, SFMono-Regular, Menlo, monospace;
  --text-xs: 0.6944rem;
  --text-xs--line-height: 1.75;
  --text-xs--letter-spacing: 0.0116em;
  --text-sm: 0.8333rem;
  --text-sm--line-height: 1.652;
  --text-sm--letter-spacing: 0.0058em;
  --text-base: 1rem;
  --text-base--line-height: 1.533;
  --text-base--letter-spacing: 0em;
  --text-lg: 1.2rem;
  --text-lg--line-height: 1.415;
  --text-lg--letter-spacing: -0.0058em;
  --text-xl: 1.44rem;
  --text-xl--line-height: 1.297;
  --text-xl--letter-spacing: -0.0116em;
  --text-2xl: 1.728rem;
  --text-2xl--line-height: 1.178;
  --text-2xl--letter-spacing: -0.0174em;
  --text-3xl: 2.0736rem;
  --text-3xl--line-height: 1.06;
  --text-3xl--letter-spacing: -0.0231em;
  --text-4xl: 2.4883rem;
  --text-4xl--line-height: 1.05;
  --text-4xl--letter-spacing: -0.0289em;
  --text-5xl: 2.986rem;
  --text-5xl--line-height: 1.05;
  --text-5xl--letter-spacing: -0.0347em;

  /* Spacing */
  --spacing: 0.25rem;
  --spacing-0: 0rem;
  --spacing-0-5: 0.125rem;
  --spacing-1: 0.25rem;
  --spacing-1-5: 0.375rem;
  --spacing-2: 0.5rem;
  --spacing-2-5: 0.625rem;
  --spacing-3: 0.75rem;
  --spacing-4: 1rem;
  --spacing-5: 1.25rem;
  --spacing-6: 1.5rem;
  --spacing-8: 2rem;
  --spacing-10: 2.5rem;
  --spacing-12: 3rem;
  --spacing-16: 4rem;
  --spacing-20: 5rem;
  --spacing-24: 6rem;
  --spacing-32: 8rem;

  /* Radii */
  --radius-none: 0rem;
  --radius-sm: 0.25rem;
  --radius-md: 0.5rem;
  --radius-lg: 0.75rem;
  --radius-xl: 1rem;
  --radius-2xl: 1.5rem;
  --radius-full: 9999px;

  /* Shadows */
  --shadow-sm: 0 1px 2px 0px rgb(10 10 10 / 0.05);
  --shadow-md: 0 4px 6px -1px rgb(10 10 10 / 0.1), 0 2px 4px -2px rgb(10 10 10 / 0.1);
  --shadow-lg: 0 10px 15px -3px rgb(10 10 10 / 0.1), 0 4px 6px -4px rgb(10 10 10 / 0.1);
  --shadow-xl: 0 20px 25px -5px rgb(10 10 10 / 0.1), 0 8px 10px -6px rgb(10 10 10 / 0.1);

}
"
`;
